added stars for rating

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChg6D6L48QD0YxK1FxWbUOttaTBFLGl1A&libraries=places"></script>
-    <link rel="stylesheet" href="./Develop/css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="./Develop/css/style.css">
     <title>Quality Restaurant Finder</title>
 </head>
 <!-- Body of the page where we include the search area, the users favorites section, and all the restaurants in their area -->
